# whispering_vr_subtitles_display_plugin

./: .clang-format  CMakeLists.txt  LICENSE  README.md
scripts/: init_third.sh  update_openvr.sh  update_rawdraw.sh  update_spdlog.sh
src/: main.cpp  overlay.cpp  overlay.h
third/: CMakeLists.txt
third/ref/: CMakeLists.txt  main.cpp  openvroverlaycontroller.cpp  overlaywidget.cpp
